# indiana

./: .gitignore  Cargo.toml  README.md  log.txt
.github/workflows/: build.yml  build_deb.yml  build_macos.yml  build_win.yml  test.yml
benches/: search.rs
src/: cli.rs  commands.rs  error.rs  file_explorer.rs  file_utils.rs  lib.rs  main.rs  package.rs  parallel_explorer.rs  parser.rs  prettytable.rs  printer.rs  semver_filter.rs
src/file_explorer/: explorer.rs  parallel_explorer.rs
src/parser/: data.rs
src/printer/: json.rs  pretty_table.rs
